Refactoring and fix zoom jump

--- a/public/index.css
+++ b/public/index.css
@@ -89,7 +89,7 @@ text {
 	height: fit-content;
 	background-color: #f5f5f5;
 	z-index: 100;
-	padding: 6px 6px;
+	padding: 6px 12px;
 	opacity: 90%;
 }
 
